# clawapi-manager

./: .gitignore  BOUNTY.md  CHANGELOG.md  CLAUDE.md  HIGHLIGHTS.md  README.md  SKILL.md  TROUBLESHOOTING.md  _meta.json  claw_api_manager_central.py  clawapi  clawapi-rich.py  clawapi-tui.py  clawapi-ui.py  clawapi_helper.py  cockpit-admin.sh  cron.example  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.omx/: metrics.json
.omx/logs/: hooks-2026-03-20.jsonl  turns-2026-03-20.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
config/: .env.example  managed_keys_central.json.example  notify.json.example  openrouter_keys.json.example
docs/: asl-daemon-api-v1.md
lib/: action_cost.py  action_queue.py  ai_complexity_predictor.py  apex_client.py  balance_checker.py  budget_gate.py  builtin_providers.py  config_cache.py  config_manager.py  constants.py  cost_estimator.py  cost_monitor.py  cost_predictor.py  device_provider.py  elastic_router.py  firecrawl_provider.py  mesh_bridge.py  model_switcher.py  provider_adapter.py  puaclaw_ab_test.py  puaclaw_boost.py  scrapling_provider.py  smart_router.py  task_delegation.py
logrotate.d/: api-cockpit
skills/freeclaw/: SKILL.md
tests/: test_asl_core.py
